First commited as after_70275_rev1